完善管理员登录方案

--- a/src/auth/登录鉴权.md
+++ b/src/auth/登录鉴权.md
@@ -495,3 +495,100 @@ export class LoginAdminDto {
 - `admin.schema.ts` 和 DTO 文件：定义数据结构和请求数据验证规则。
 
 通过这些详细的中文注释，即使对NestJS毫无了解，也可以逐行理解此代码的作用和意义。
+
+
+### 如何使用此 NestJS 项目进行认证？
+
+#### 1. **环境配置**
+
+首先，确保你已经正确配置了 `.env` 文件，它存放了数据库连接和 JWT 配置等敏感信息：
+
+```env
+MONGODB_URI=mongodb://localhost/nest-auth       # 连接本地的 MongoDB 'nest-auth' 数据库
+JWT_SECRET=your_secure_jwt_secret_key           # 设置一个复杂的JWT密钥用于签名
+JWT_EXPIRATION=60m                              # JWT的过期时间设置为60分钟
+```
+
+#### 4. **注册管理员（POST /auth/register）**
+
+管理员用户可以通过发送以下 POST 请求来注册：
+
+**请求：**
+
+```bash
+POST http://localhost:3000/auth/register
+Content-Type: application/json
+
+{
+  "username": "adminUser",
+  "password": "adminPassword"
+}
+```
+
+**响应：**
+
+```json
+{
+  "message": "管理员注册成功",
+  "adminId": "管理员的MongoDB文档ID"
+}
+```
+
+#### 5. **登录管理员（POST /auth/login）**
+
+管理员登录并获取 JWT 令牌，通过用户名和密码进行认证。登录时需要发送以下请求：
+
+**请求：**
+
+```bash
+POST http://localhost:3000/auth/login
+Content-Type: application/json
+
+{
+  "username": "adminUser",
+  "password": "adminPassword"
+}
+```
+
+**响应：**
+
+```json
+{
+  "access_token": "jwt_token_here"
+}
+```
+
+**注意**：`access_token` 是你获取到的 JWT 令牌，登录成功后会返回该令牌。你需要将它附加在以后的请求中作为认证凭证。
+
+#### 6. **访问受保护的资源（GET /auth/profile）**
+
+当你登录成功并获得了 JWT 令牌后，可以使用这个令牌来访问受保护的资源（如管理员个人资料）。你需要将 JWT 令牌放在请求头的 `Authorization` 字段中。
+
+**请求：**
+
+```bash
+GET http://localhost:3000/auth/profile
+Authorization: Bearer <your_jwt_token>
+```
+
+**响应：**
+
+```json
+{
+  "adminId": "管理员的MongoDB文档ID",
+  "username": "adminUser"
+}
+```
+
+此请求将返回你在登录时存储的用户信息。
+
+#### 7. **验证 JWT 的有效性**
+
+如果你发送请求到需要 JWT 的路由时，JWT 不合法或者过期，服务器会返回一个 `401 Unauthorized` 错误，提示令牌无效或已过期。
+
+### **总结：**
+- **管理员注册**：使用 `/auth/register` 路由创建管理员。
+- **管理员登录**：通过 `/auth/login` 路由验证管理员身份并返回 JWT 令牌。
+- **访问保护路由**：在请求头中附加 JWT 令牌，使用 `/auth/profile` 路由访问管理员的个人资料。
+
+通过以上步骤，你可以完成整个认证流程。
